Finished Module 2 assignment

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Module 2 - Solution</title>
+<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-
+<h1> Our Menu</h1>
+<div class="row">
+	<div class="col-ld-4 col-md-6 col-sd-12">
+		<div class="section">
+			<div class="sectionTitle1">Chicken</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem rerum laborum dicta, doloribus eius expedita architecto quia quidem at, optio, tenetur voluptatibus. Deleniti libero dolorem numquam repellat expedita! Natus, minima.
+		</div>
+	</div>
+	<div class="col-ld-4 col-md-6 col-sd-12">
+		<div class="section">
+			<div class="sectionTitle2">Beef</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam enim, ipsum nihil unde voluptatum, exercitationem aperiam nobis recusandae quidem sunt voluptates tempora doloremque dicta ab quisquam, libero aspernatur, quis distinctio.
+		</div>
+	</div>
+	<div class="col-ld-4 col-md-12 col-sd-12">
+		<div class="section">
+			<div class="sectionTitle3">Sushi</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam enim, ipsum nihil unde voluptatum, exercitationem aperiam nobis recusandae quidem sunt voluptates tempora doloremque dicta ab quisquam, libero aspernatur, quis distinctio.
+		</div>
+	</div>
+</div>
 </body>
 </html>
